Fix naming CLOUDFRONT-1166

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
-The following authors have created the source code of "Yandex Flavored Markdown"
+The following authors have created the source code of "Yandex Flavored Markdown Viewer"
 published and distributed by YANDEX LLC as the owner:
 
 Vladimir Fedin vladimirfedin@yandex-team.ru
+Evgeny Biriulin birman111@yandex-team.ru
+Evgeny Uspenskiy euspenskiy@yandex-team.ru
