--- a/tests/mocks/regression/input/1.md
+++ b/tests/mocks/regression/input/1.md
@@ -12,3 +12,12 @@ not_var{{skip()}}
 
 {{default-var}}
 ```
+
+
+`[not a link](./path/to/relative/file.md)`
+
+[{#T}](./mermaid.md)
+
+[{#T}](./mermaid.md#info)
+
+[](./latex.md)
