fix: Fix local link rebasing and resolving

--- a/tests/mocks/regression/input/1.md
+++ b/tests/mocks/regression/input/1.md
@@ -16,6 +16,8 @@ not_var{{skip()}}
 
 `[not a link](./path/to/relative/file.md)`
 
+## Subtitle {#subtitle}
+
 [{#T}](./mermaid.md)
 
 [{#T}](./mermaid.md#info)
