fix: add default yaml conditions, update test, add toc.yaml files to translations

--- a/tests/mocks/translation/input/ru/nested/toc.yaml
+++ b/tests/mocks/translation/input/ru/nested/toc.yaml
@@ -10,6 +10,7 @@ items:
         items:
           - name: Обзор
             href: syntax/index.md
+            when: test == "nested"
           - name: Базовая разметка
             href: syntax/base.md
           - name: Списки
