fix: link err to warn

--- a/tests/mocks/regression/input/1.md
+++ b/tests/mocks/regression/input/1.md
@@ -24,4 +24,8 @@ not_var{{skip()}}
 
 [](./latex.md)
 
+[nowhere-link](./nowhere-link.md)
+
 {% include [user](includes/user.md) %}
+
+Forbibben text before {% include [user](includes/user.md) %}
