fix: link err to warn

--- a/tests/mocks/regression/input/1.md
+++ b/tests/mocks/regression/input/1.md
@@ -20,8 +20,10 @@ not_var{{skip()}}
 
 [{#T}](./mermaid.md)
 
+[Title](../to-nowhere.md)
+
 [{#T}](./mermaid.md#info)
 
 [](./latex.md)
 
-{% include [user](includes/user.md) %}
+FORBIDDEN TEXT BEFORE {% include [user](includes/user.md) %}
