fix: Fix project links exists check

--- a/tests/mocks/regression/input/1.md
+++ b/tests/mocks/regression/input/1.md
@@ -26,6 +26,8 @@ not_var{{skip()}}
 
 [nowhere-link](./nowhere-link.md)
 
+[noext-link](./includes)
+
 {% include [user](includes/user.md) %}
 
 Forbibben text before {% include [user](includes/user.md) %}
