fix: translate test: Change regexp for search construction

--- a/tests/mocks/translation/openapi/input/openapi-spec.yaml
+++ b/tests/mocks/translation/openapi/input/openapi-spec.yaml
@@ -27,6 +27,11 @@ components:
       properties:
         A:
           type: string
+          description: |
+            Статус загрузки:
+            - `UPLOADED` — загрузка завершена.
+            - `IN_PROGRESS` — загрузка находится в процессе обработки.
+            - `PROCESSED` — загрузка успешно обработана.
     #          $ref: '#/components/schemas/RecurceMiddle'
     RecurceMiddle:
       type: object
