fix: Fix autotitles resolving in headings

--- a/tests/mocks/preprocess/input/1.md
+++ b/tests/mocks/preprocess/input/1.md
@@ -18,12 +18,12 @@ not_var{{skip()}}
 
 ## Subtitle {#subtitle}
 
-[{#T}](./mermaid.md)
+[{#T}](mermaid.md)
 
-[{#T}](./mermaid.md#info)
+[{#T}](mermaid.md#info)
 
-[](./latex.md)
+[](latex.md)
 
-[noext-link](./includes)
+[noext-link](includes)
 
 {% include [user](includes/user.md) %}
