--- a/tests/mocks/translation/compose/input/toc.yaml.xliff
+++ b/tests/mocks/translation/compose/input/toc.yaml.xliff
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-  <file original="file.ext" source-language="ru-RU" target-language="en-US" datatype="markdown">
+  <file original="file.ext" source-language="ru-RU" target-language="es-ES" datatype="markdown">
     <header>
       <skeleton>
         <external-file href="file.skl"></external-file>
@@ -9,7 +9,7 @@
     <body>
       <trans-unit id="0">
         <source xml:space="preserve">openapi</source>
-        <target>Перевод 1</target>
+        <target>Compose openapi 1</target>
       </trans-unit>
     </body>
   </file>
