--- a/tests/mocks/translation/openapi/input/openapi-spec.yaml
+++ b/tests/mocks/translation/openapi/input/openapi-spec.yaml
@@ -22,6 +22,10 @@ paths:
                 $ref: '#/components/schemas/RecurceTop'
 components:
   schemas:
+    DescriptionRef:
+      description: |
+        Schema description test
+      type: string
     RecurceTop:
       type: object
       properties:
@@ -40,3 +44,11 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/RecurceTop'
+        test:
+          title: Title
+          description: |
+            Description with ref
+          $ref: '#/components/schemas/DescriptionRef'
+        external:
+          description: Parent with external
+          $ref: 'common.yaml#/components/schemas/ExternalCommonDescriptionRef'
